--- a/index.html
+++ b/index.html
@@ -306,9 +306,9 @@
         <h3>RBC Global Asset Management</h3>
         <span>Portfolio Analyst Intern</span>
         <ul>
-          <li>Supported portfolio strategy and asset allocation across public markets</li>
-          <li>Built macro-driven analyses linking GDP, inflation, and central bank policy</li>
-          <li>Produced advisor-facing materials supporting client asset growth</li>
+          <li>Supported 165 Billion dollar multi-asset portfolio by linking macroeconomic indicators (GDP, inflation, central bank policy) to asset allocation and performance outcomes.</li>
+          <li>Conducted market and portfolio analytics to support investment commentary and insights used by senior leadership and advisory teams.</li>
+          <li>Prepared client-facing materials translating market data into clear investment narratives for advisors and end investors.</li>
         </ul>
       </div>
     </div>
@@ -321,9 +321,9 @@
         <h3>IG Wealth Management</h3>
         <span>Commercial Banking Analyst Intern</span>
         <ul>
-          <li>Supported pricing and product strategy for a large mortgage portfolio</li>
-          <li>Built dashboards tracking pricing trends</li>
-          <li>Improved rate exception and approval workflows</li>
+          <li>Prepared client-facing materials translating market data into clear investment narratives for advisors and end investors.</li>
+          <li>Analyzed mortgage pricing and competitive rate data to support product strategy and portfolio-level decision-making.</li>
+          <li>Supported internal approval and rate-exception processes, contributing to faster, more consistent credit decisions.</li>
         </ul>
       </div>
     </div>
@@ -336,9 +336,9 @@
         <h3>RTech Solutions</h3>
         <span>Financial Analyst</span>
         <ul>
-          <li>Built financial models for budgeting, forecasting, and scenarios</li>
-          <li>Analyzed cost drivers and operational inefficiencies</li>
-          <li>Prepared management-ready financial reports</li>
+          <li>Supported internal approval and rate-exception processes, contributing to faster, more consistent credit decisions.</li>
+          <li>Analyzed cost structures and operational drivers to identify inefficiencies and improvement opportunities.</li>
+          <li>Prepared management-ready financial reports and variance analyses to support performance tracking.</li>
         </ul>
       </div>
     </div>
@@ -351,8 +351,8 @@
         <h3>Bank of Montreal (BMO)</h3>
         <span>Bank Teller</span>
         <ul>
-          <li>Delivered regulated frontline banking services</li>
-          <li>Built trust through accuracy and discretion</li>
+          <li>Delivered frontline banking services in a regulated environment, handling transactions, account inquiries, and client support.</li>
+          <li>Communicated banking products and policies clearly while maintaining accuracy, discretion, and compliance.</li>
           <li>Developed operational and compliance foundation</li>
         </ul>
       </div>
@@ -446,6 +446,7 @@
 </div>
 </body>
 </html>
+
 
 
 
